--- a/catalog/templates/category/deleteitem.html
+++ b/catalog/templates/category/deleteitem.html
@@ -6,6 +6,7 @@
     <div class="content-panel">
         <form action="#" method='post'>
             <div class="categoryitem">
+                <input name="_csrf_token" type=hidden value="{{ gen_csrf_token() }}">
                 <h3>Are you sure you want to delete {{selectedCategoryItem.title}}?</h3>
             </div>
             <div class="categoryitem-actions">
