--- a/catalog/templates/category/newitem.html
+++ b/catalog/templates/category/newitem.html
@@ -11,6 +11,8 @@
         <form action="#" method="post">
             <div class="categoryitem">
                 <div class="form-group">
+                    <input name="_csrf_token" type=hidden value="{{ gen_csrf_token() }}">
+
                     <label for="title">Title:</label>
                     <input type="text" maxlength="80" class="form-control" name="title" placeholder="Title of the item" required>
 
